crates/privacy-pools-sdk-core/tests/ui/secret_serde.stderr
error[E0277]: the trait bound `Secret: serde::Serialize` is not satisfied
 --> tests/ui/secret_serde.rs:6:35
  |
6 |     let _ = serde_json::to_string(&secret).unwrap();
  |             --------------------- ^^^^^^^ the trait `Serialize` is not implemented for `Secret`
  |             |
  |             required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Secret` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `serde_json::to_string`
 --> $CARGO/serde_json-$VERSION/src/ser.rs
  |
  | pub fn to_string<T>(value: &T) -> Result<String>
  |        --------- required by a bound in this function
  | where
  |     T: ?Sized + Serialize,
  |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `MasterKeys: serde::Serialize` is not satisfied
  --> tests/ui/secret_serde.rs:12:35
   |
12 |     let _ = serde_json::to_string(&keys).unwrap();
   |             --------------------- ^^^^^ the trait `Serialize` is not implemented for `MasterKeys`
   |             |
   |             required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `MasterKeys` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`
